# test-raspberry-pi-pico

20240831-pico2-Lchika/: 20240831-pico2-Lchika.c  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
20240831-pico2-PIO_NeoPixel/: CMakeLists.txt
20240914-pico_Lchika/: 20240914-pico_Lchika.c  CMakeLists.txt
20240914-ps_controller/: 20240914-ps_controller.c  CMakeLists.txt  README.md
